# revbayes

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  NEWS.md  README.md  meson.build  meson_options.txt  precision.cpp  shell.nix  travis-build.sh
src/: CMakeLists.txt
src/cmd/: RbGTKGui.cpp  RbGTKGui.h  main.cpp
src/core/analysis/: BootstrapAnalysis.cpp  HillClimber.cpp  HillClimber.h  MaximumLikelihoodAnalysis.cpp  MaximumLikelihoodEstimation.cpp  MaximumLikelihoodEstimation.h  Model.cpp  Model.h  MonteCarloAnalysis.cpp  MonteCarloAnalysis.h  PosteriorPredictiveAnalysis.cpp  PosteriorPredictiveAnalysis.h  PosteriorPredictiveSimulation.cpp  PosteriorPredictiveSimulation.h  PowerPosteriorAnalysis.cpp  PowerPosteriorAnalysis.h  ValidationAnalysis.cpp  ValidationAnalysis.h
src/core/dag/: ConstantNode.h  DagNode.cpp  DagNode.h  DeterministicNode.h  DynamicNode.h  StochasticNode.h  TypedDagNode.cpp  TypedDagNode.h
src/core/datatypes/: DagNodeMap.cpp  MultiValueEvent.cpp  MultiValueEvent.h  Parallelizable.h  Printable.h  Printer.h  PseudoData.h  PseudoDataLikelihood.h  PseudoObservation.h  RbBitSet.cpp  RbBitSet.h  RbConstIterator.h  RbConstIteratorImpl.h  RbContainer.h  RbIterator.h  RbIteratorImpl.h  RbVector.h  RbVectorImpl.h  Serializable.cpp  Serializable.h  Serializer.h  json.h
src/core/distributions/: AnalyticalMixtureDistribution.h  AutocorrelatedEventDistribution.cpp  AutocorrelatedEventDistribution.h  DirichletProcessPriorDistribution.h  Distribution.cpp  Distribution.h  EmpiricalDistribution.h  EmpiricalSampleDistribution.h  EventDistribution.h  IidDistribution.h  InverseDistribution.cpp  InverseDistribution.h  LogDistribution.cpp  LogDistribution.h  MarkovEventsDistribution.h  MarkovTimesDistribution.cpp  MarkovTimesDistribution.h  MixtureDistribution.h  MultiValueEventDistribution.cpp  MultiValueEventDistribution.h  MultivariateLogDistribution.cpp  MultivariateLogDistribution.h  PseudoDist.h  RequireDist.h  ReversibleJumpMixtureConstantDistribution.h  TransformedDistribution.cpp  TransformedDistribution.h  TransformedVectorDistribution.cpp  TransformedVectorDistribution.h  TypedDistribution.h  UniformPartitioningDistribution.h  VectorMixtureDistribution.h  WeightedSampleDistribution.h
src/core/functions/: Function.cpp  GenericFunction.h  MemberFunction.h
src/core/help/: RbHelpDatabase.cpp  RbHelpRenderer.cpp  RbHelpRenderer.h  RbHelpSystem.cpp
src/core/io/: BitsetCharacterDataConverter.cpp  BitsetCharacterDataConverter.h  BranchLengthDistributionReader.cpp  BranchLengthDistributionReader.h  CountFileToNaturalNumbersConverter.cpp  CountFileToNaturalNumbersConverter.h  CountsFileWriter.cpp  CountsFileWriter.h  DelimitedCharacterDataReader.cpp  DelimitedCharacterDataReader.h  DelimitedCharacterDataWriter.cpp  DelimitedCharacterDataWriter.h  DelimitedDataReader.cpp  DelimitedDataReader.h  DistanceMatrixReader.cpp  DistanceMatrixReader.h  FastaFileToNaturalNumbersConverter.cpp  FastaFileToNaturalNumbersConverter.h  FastaWriter.cpp  FastaWriter.h  MatrixReader.cpp  MatrixReader.h  NclReader.cpp  NclReader.h  NewickConverter.cpp  NewickConverter.h  NewickTreeReader.cpp  NewickTreeReader.h  NexusWriter.cpp  NexusWriter.h  PhylowoodConverter.cpp  PhylowoodConverter.h  PoMoCountFileReader.cpp  PoMoCountFileReader.h  PoMoState4Converter.cpp  PoMoStateConverter.cpp  PoMoStateConverter.h  ProgressBar.h  RelativeNodeAgeConstraintsReader.cpp  RelativeNodeAgeConstraintsReader.h  (+12 more)
src/core/math/: CholeskyDecomposition.cpp  CholeskyDecomposition.h  EigenSystem.cpp  EigenSystem.h  LogDensity.h  LogSum.h  RandomNumberFactory.cpp  RandomNumberFactory.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RbMathCombinatorialFunctions.cpp  RbMathCombinatorialFunctions.h  RbMathFunctions.cpp  RbMathFunctions.h  RbMathGaussianElimination.cpp  RbMathLogic.cpp  RbMathLogic.h  RbMathMatrix.cpp  RbMathVector.cpp  RbMathVector.h  RbStatisticsHelper.cpp  RbStatisticsHelper.h
src/core/monitors/: AbstractFileMonitor.cpp  AbstractFileMonitor.h  AncestralStateMonitor.h  BirthDeathShiftMonitor.cpp  BirthDeathShiftMonitor.h  BirthDeathStochasticCharacterMappingMonitor.h  ExtendedNewickTreeMonitor.cpp  ExtendedNewickTreeMonitor.h  HomeologPhaseMonitor.cpp  HomeologPhaseMonitor.h  JointConditionalAncestralStateMonitor.h  ModelMonitor.cpp  ModelMonitor.h  Monitor.cpp  Monitor.h  NexusMonitor.cpp  NexusMonitor.h  ProbabilityMonitor.cpp  ProbabilityMonitor.h  ScreenMonitor.cpp  ScreenMonitor.h  SiteMixtureAllocationMonitor.h  StochasticBranchRateMonitor.cpp  StochasticBranchRateMonitor.h  StochasticBranchStateTimesMonitor.cpp  StochasticBranchStateTimesMonitor.h  StochasticCharacterMappingJSONMonitor.h  StochasticCharacterMappingMonitor.h  StochasticVariableMonitor.cpp  StochasticVariableMonitor.h  VariableMonitor.cpp  VariableMonitor.h
src/core/moves/: AbstractGibbsMove.cpp  AbstractGibbsMove.h  AbstractMove.cpp  AbstractMove.h  DebugMove.cpp  DebugMove.h  EllipticalSliceSamplingLognormalIIDMove.cpp  EllipticalSliceSamplingLognormalIIDMove.h  EllipticalSliceSamplingSimpleMove.cpp  EllipticalSliceSamplingSimpleMove.h  MetropolisHastingsMetaMove.cpp  MetropolisHastingsMove.cpp  MetropolisHastingsMove.h  Move.cpp  Move.h  MoveSchedule.h  RandomMoveSchedule.cpp  RandomMoveSchedule.h  SequentialMoveSchedule.cpp  SequentialMoveSchedule.h  SingleRandomMoveSchedule.cpp  SingleRandomMoveSchedule.h  SliceSamplingMove.cpp  SliceSamplingMove.h  TreePoposal.h
src/core/simulators/: AlleleFrequencySimulator.cpp  AlleleFrequencySimulator.h  CoalescentSFSSimulator.cpp  CoalescentSFSSimulator.h  SimulationConditions.h  StartingTreeSimulator.cpp  StartingTreeSimulator.h
src/core/utils/: BeagleInstance.cpp  BeagleInstance.h  BeagleUtilities.cpp  BeagleUtilities.h  BirthDeathForwardSimulator.cpp  BirthDeathForwardSimulator.h  FileFormat.h  MpiUtilities.cpp  MpiUtilities.h  RbConstants.h  RbException.cpp  RbException.h  RbFileManager.cpp  RbUtil.h  (+14 more)
src/grammar/: grammar.y  lex.l
src/help2yml/: main.cpp
src/revlanguage/: CommandLineUtils.h  Info.plist  RevLanguageMain.cpp  RevLanguageMain.h  main.cpp
(+4239 files in other folders)
