option('mpi', type : 'boolean', value : false, description: 'Compile with MPI')
option('jupyter', type: 'boolean', value: false, description: 'Build rb-jupyter kernel')
option('studio', type: 'boolean', value: false, description: 'Build gtk shell')
option('openlibm', type: 'boolean', value: false, description: 'Require openlibm')
option('static', type: 'boolean', value: false, description: 'Build a statically-linked executable')
option('help2yml', type : 'boolean', value : false, description: 'Build help2yml')
option('rb-exe-name', type : 'string', value : 'default', description: 'Name for revbayes executable')
